--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -37,3 +37,8 @@ $special-border: $special-pink;
 
 $arial: "Arial", sans-serif;
 $oswald: "Oswald", "Arial", sans-serif;
+
+//breakpoints
+
+$tablet: 768px;
+$desktop: 1440px;
