--- a/source/sass/_container.scss
+++ b/source/sass/_container.scss
@@ -4,26 +4,26 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  @media (min-width: 768px) {
-    width: 768px;
+  @media (min-width: $tablet) {
+    width: $tablet;
     padding-left: 30px;
     padding-right: 30px;
 
-    &--catalog {
+    &--form {
       padding-left: 70px;
       padding-right: 67px;
     }
   }
 
-  @media (min-width: 1440px) {
-    width: 1440px;
+  @media (min-width: $desktop) {
+    width: $desktop;
     padding-left: 110px;
     padding-right: 110px;
   }
 
 
   &--reset {
-    @media (min-width: 768px) {
+    @media (min-width: $tablet) {
       width: auto;
       padding-left: 0;
       padding-right: 0;
@@ -31,7 +31,7 @@
   }
 
   &--reset-form {
-    @media (min-width: 1440px) {
+    @media (min-width: $desktop) {
       width: auto;
       padding-left: 0;
       padding-right: 0;
