--- a/source/sass/blocks/_checkbox.scss
+++ b/source/sass/blocks/_checkbox.scss
@@ -9,7 +9,7 @@
   cursor: pointer;
   user-select: none;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     padding-left: 59px;
   }
 }
@@ -28,7 +28,7 @@
   width: 18px;
   height: 14px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     top: 2px;
     left: 8px;
 
@@ -47,7 +47,7 @@
 
   border: 1px solid $border;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     width: 40px;
     height: 40px;
   }
