--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -3,7 +3,7 @@
 
   background-color: $dark-back;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     padding-top: 0;
     padding-bottom: 67px;
     background: linear-gradient(to top, $dark-back, $dark-back 384px, transparent, transparent 384px);
@@ -11,7 +11,7 @@
 }
 
 .example__wrapper {
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     display: grid;
     grid-template-rows: repeat(3, auto);
     grid-template-columns: repeat(2, auto);
@@ -27,7 +27,7 @@
   line-height: 40px;
   font-family: $oswald;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     margin-top: 43px;
     margin-bottom: 63px;
 
@@ -35,7 +35,7 @@
     line-height: 60px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     grid-row: 1/2;
     grid-column: 1/2;
 
@@ -50,14 +50,14 @@
   line-height: 18px;
   color: $text-main;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     margin-bottom: 54px;
 
     font-size: 16px;
     line-height: 24px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     grid-row: 2/3;
     grid-column: 1/2;
 
@@ -71,7 +71,7 @@
 
   margin: 0;
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     grid-row: 3/4;
     grid-column: 1/2;
   }
@@ -86,7 +86,7 @@
     margin-right: 0;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     margin-right: 42px;
     margin-bottom: 55px;
 
@@ -100,12 +100,12 @@
   display: flex;
   border: none;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     display: block;
     margin-left: 167px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     display: flex;
     flex-wrap: wrap;
     margin-left: 0;
@@ -117,7 +117,7 @@
   line-height: 12px;
   color: $text-main;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     font-size: 14px;
     line-height: 14px;
   }
@@ -128,7 +128,7 @@
   line-height: 24px;
   font-family: $oswald;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     font-size: 30px;
     line-height: 37px;
   }
@@ -141,14 +141,14 @@
   font-family: $oswald;
   text-transform: uppercase;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     font-size: 20px;
     text-align: end;
   }
 }
 
 .example__slider {
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     grid-row: 1/4;
     grid-column: 2/3;
   }
