--- a/source/sass/blocks/_form-control.scss
+++ b/source/sass/blocks/_form-control.scss
@@ -28,7 +28,7 @@
 
     resize: none;
 
-    @media (min-width: 1440px) {
+    @media (min-width: $desktop) {
       height: 174px;
     }
   }
@@ -37,7 +37,7 @@
     color: $text-main;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     padding: 10px 10px 11px 18px;
 
     font-size: 20px;
