--- a/source/sass/blocks/_logo.scss
+++ b/source/sass/blocks/_logo.scss
@@ -3,7 +3,7 @@
   display: block;
   margin-right: 55px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     display: none;
   }
 }
@@ -11,12 +11,12 @@
 .logo__image--tablet {
   display: none;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     display: block;
     margin-right: 12px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     display: none;
     margin-right: 12px;
   }
@@ -25,7 +25,7 @@
 .logo__image--desktop {
   display: none;
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     display: block;
     margin-right: 14px;
   }
