--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -15,16 +15,16 @@
   padding: 28px 19px;
 
   &--form {
-    @media (min-width: 768px) {
+    @media (min-width: $tablet) {
       padding-bottom: 59px;
     }
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     padding: 62px 72px 51px 71px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     position: absolute;
     top: 80px;
     left: calc(50vw - 640px);
@@ -43,7 +43,7 @@
   font-family: $oswald;
   text-transform: uppercase;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     max-width: 171px;
     font-size: 20px;
     line-height: 21px;
@@ -57,14 +57,14 @@
   line-height: 20px;
   color: $text-main;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     max-width: 159px;
     font-size: 16px;
     text-align: end;
   }
 
   &--space {
-    @media (min-width: 768px) {
+    @media (min-width: $tablet) {
       display: block;
       margin-top: 23px;
     }
@@ -82,9 +82,23 @@
 }
 
 .page-footer__container {
-  @media (min-width: 768px) {
+  width: 320px;
+  margin: 0 auto;
+  padding-left: 19px;
+  padding-right: 22px;
+
+  @media (min-width: $tablet) {
     display: flex;
     align-items: center;
+    width: $tablet;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media (min-width: $desktop) {
+    width: $desktop;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 
@@ -95,11 +109,11 @@
   padding-top: 39px;
   padding-bottom: 37px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     margin-right: 156px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     margin-right: 413px;
   }
 }
@@ -107,7 +121,7 @@
 .page-footer__title-image {
   display: block;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     max-width: 128px;
   }
 }
@@ -126,13 +140,13 @@
 }
 
 .page-footer__element {
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     min-width: 129px;
-    margin-right: 138px;
+    margin-right: 131px;
     border: none;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     margin-right: 387px;
   }
 }
