--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   padding: 12px 0 0 0;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,21 +9,21 @@
   }
 
   &--container {
-    @media (min-width: 768px) {
-      width: 768px;
+    @media (min-width: $tablet) {
+      width: $tablet;
       padding-left: 30px;
       padding-right: 30px;
       margin: 0 auto;
     }
 
-    @media (min-width: 1440px) {
-      width: 1440px;
+    @media (min-width: $desktop) {
+      width: $desktop;
       padding-left: 110px;
       padding-right: 109px;
     }
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     padding-top: 52px;
     padding-bottom: 111px;
 
@@ -37,7 +37,7 @@
   padding: 0 0 16px;
   border-bottom: 1px solid $special-pink;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     padding: 0;
     border: none;
   }
@@ -46,7 +46,7 @@
 .page-header__inner {
   display: flex;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     padding-right: 0;
   }
 }
@@ -55,11 +55,11 @@
   display: flex;
   margin-right: 65px;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     margin-right: 95px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: $desktop) {
     margin-right: 540px;
 
     &--form {
@@ -74,7 +74,7 @@
   background-color: transparent;
   cursor: pointer;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     display: none;
   }
 }
