--- a/source/sass/blocks/_primary-button.scss
+++ b/source/sass/blocks/_primary-button.scss
@@ -17,7 +17,7 @@
   border: none;
 
   &--promo-tablet {
-    @media (min-width: 768px) {
+    @media (min-width: $tablet) {
       padding: 14px 26px;
       font-size: 20px;
       line-height: 20px;
@@ -30,8 +30,7 @@
     font-size: 16px;
     line-height: 20px;
 
-    @media (min-width: 768px) {
-      min-height: 52px;
+    @media (min-width: $tablet) {
       padding: 14px 45px;
 
       font-size: 20px;
