--- a/source/sass/blocks/_radio-button.scss
+++ b/source/sass/blocks/_radio-button.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   user-select: none;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     padding-left: 58px;
   }
 }
@@ -21,7 +21,7 @@
   border: 1px solid $border;
   border-radius: 50%;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     width: 40px;
     height: 40px;
   }
@@ -38,7 +38,7 @@
   background-color: $main;
   border-radius: 50%;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     top: 6px;
     left: 11px;
     width: 18px;
