--- a/source/sass/blocks/_socials.scss
+++ b/source/sass/blocks/_socials.scss
@@ -11,7 +11,7 @@
   border-top: 1px solid $special-pink;
   border-bottom: 1px solid $special-pink;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     border: none;
   }
 }
@@ -23,7 +23,7 @@
     margin-right: 0;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     margin-right: 27px;
   }
 }
