--- a/source/sass/blocks/_add-good.scss
+++ b/source/sass/blocks/_add-good.scss
@@ -1,15 +1,8 @@
 .add-good {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: start;
-
   padding-top: 13px;
   padding-bottom: 19px;
 
   @media (min-width: $tablet) {
-    flex-direction: row;
-    justify-content: space-between;
     padding: 26px 38px 28px;
   }
 
@@ -17,8 +10,7 @@
     display: grid;
     grid-template-columns: 288px 288px 244px;
     gap: 38px;
-    justify-content: stretch;
-    align-items: stretch;
+    align-items: flex-start;
     padding: 15px 0 17px;
   }
 }
