--- a/source/sass/blocks/_card.scss
+++ b/source/sass/blocks/_card.scss
@@ -4,9 +4,43 @@
   padding-top: 20px;
   padding-bottom: 25px;
 
+  &--show-more {
+    .card__title {
+      width: 204px;
+      margin: 78px 37px 8px 39px;
+    }
+
+    .card__button {
+      color: $text-main;
+      background-color: $special-btn;
+    }
+  }
+
   @media (min-width: $tablet) {
-    justify-content: center;
-    padding: 0 37px 40px 39px;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 36px 40px;
+
+    background-color: $back;
+
+    &--show-more {
+      background-color: $text-promo;
+      border: 2px solid $back;
+
+      .card__title {
+        width: 134px;
+        margin: 161px 57px 23px;
+      }
+    }
+  }
+
+  @media (min-width: $desktop) {
+    &--show-more {
+      .card__title {
+        margin: 167px 16px 26px;
+        line-height: 25px;
+      }
+    }
   }
 }
 
@@ -20,11 +54,6 @@
   text-transform: uppercase;
   color: $card-title;
 
-  &--show-more {
-    width: 204px;
-    margin: 78px 37px 8px 39px;
-  }
-
   @media (min-width: $tablet) {
     width: 132px;
     margin-bottom: 21px;
@@ -33,18 +62,6 @@
     line-height: 24px;
 
     text-align: center;
-
-    &--show-more {
-      width: 134px;
-      margin: 161px 57px 23px;
-    }
-  }
-
-  @media (min-width: $desktop) {
-    &--show-more {
-      margin: 167px 16px 26px;
-      line-height: 25px;
-    }
   }
 }
 
@@ -92,7 +109,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 251px;
+    width: 100%;
     margin-bottom: 34px;
   }
 
@@ -132,7 +149,7 @@
 .card__inner {
   display: flex;
   justify-content: space-between;
-  width: 250px;
+  width: 100%;
 
   @media (min-width: $tablet) {
     padding-top: 7px;
@@ -144,10 +161,10 @@
       padding-top: 0;
     }
   }
-
-  @media (min-width: $desktop) {
-    width: 166px;
-  }
+  //
+  //@media (min-width: $desktop) {
+  //  width: 166px;
+  //}
 }
 
 .card__value {
@@ -155,11 +172,8 @@
 }
 
 .card__button {
+  margin-top: auto;
+
   font-size: 16px;
   line-height: 20px;
-
-  &--show-more {
-    color: $text-main;
-    background-color: $special-btn;
-  }
 }
