--- a/source/sass/blocks/_cards.scss
+++ b/source/sass/blocks/_cards.scss
@@ -3,14 +3,12 @@
 
   @media (min-width: $tablet) {
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(2, 1fr);
     row-gap: 141px;
     column-gap: 60px;
   }
 
   @media (min-width: $desktop) {
-    grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(4, 1fr);
     row-gap: 144px;
     column-gap: 80px;
@@ -20,17 +18,19 @@
 .cards__item {
   border-top: 1px solid $cards-border;
 
+  &--more {
+    order: 1;
+  }
+
   &:last-child {
     border-bottom: 1px solid $cards-border;
   }
 
   @media (min-width: $tablet) {
     border: none;
-    background-color: $back;
 
     &:last-child {
-      background-color: $text-promo;
-      border: 2px solid $back;
+      border: none;
     }
   }
 }
