--- a/source/sass/blocks/_logo.scss
+++ b/source/sass/blocks/_logo.scss
@@ -1,3 +1,12 @@
+.logo {
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
 
 .logo__image--mobile {
   display: block;
