--- a/source/sass/blocks/_menu.scss
+++ b/source/sass/blocks/_menu.scss
@@ -74,4 +74,26 @@
 
 .menu__link {
   color: $text-dark;
+
+  @media (min-width: $tablet) {
+    &--current {
+      border-bottom: 2px solid $main;
+    }
+  }
+
+  @media (min-width: $desktop) {
+    color: $text-promo;
+
+    &--current-desktop {
+      border-bottom-color: inherit;
+    }
+  }
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
