--- a/source/sass/blocks/_offer.scss
+++ b/source/sass/blocks/_offer.scss
@@ -28,8 +28,8 @@
 .offer__title {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 91px;
-  margin: 0 0 29px 0;
+  align-items: center;
+  margin: 0 0 22px 0;
 
   font-weight: 400;
   font-size: 24px;
@@ -38,21 +38,69 @@
   text-transform: uppercase;
   color: $text-dark;
 
+  &::before {
+    content: "";
+    width: 50px;
+    height: 53px;
+    margin-right: 19px;
+
+    background-image: url("../img/offer-cat.svg");
+    background-size: contain;
+  }
+
+  &--pro {
+    &::before {
+
+      width: 67px;
+      height: 50px;
+      margin-right: 11px;
+
+      background-image: url("../img/offer-cat-pro.svg");
+    }
+  }
+
   @media (min-width: $tablet) {
     padding-left: 0;
     margin-bottom: 24px;
 
     font-size: 36px;
     line-height: 36px;
+
+    &::before {
+      display: none;
+    }
   }
 
   @media (min-width: $desktop) {
-    align-self: center;
+    //align-self: center;
     margin-bottom: 73px;
+
+    &::before {
+      display: block;
+      content: "";
+      width: 100px;
+      height: 106px;
+      margin-right: 62px;
+
+      background-image: url("../img/offer-cat.svg");
+      background-size: contain;
+    }
+
+    &--pro {
+      &::before {
+
+        width: 134px;
+        height: 100px;
+        margin-right: 47px;
+
+        background-image: url("../img/offer-cat-pro.svg");
+      }
+    }
   }
 }
 
 .offer__description {
+  position: relative;
   display: block;
   padding: 0 0 23px 0;
   margin: 0 0 15px 0;
@@ -71,19 +119,60 @@
     line-height: 24px;
 
     border-bottom: none;
+
+    &::after {
+      position: absolute;
+      content: "";
+      width: 200px;
+      height: 211px;
+      top: -60px;
+      left: 390px;
+
+      background-image: url("../img/offer-cat.svg");
+    }
+
+    &--pro {
+      &::after {
+        width: 268px;
+        height: 200px;
+        left: 355px;
+
+        background-image: url("../img/offer-cat-pro.svg");
+      }
+    }
   }
 
   @media (min-width: $desktop) {
     max-width: 467px;
+
+    &::after {
+      display: none;
+    }
   }
 }
 
 .offer__link {
+  display: flex;
+  align-items: center;
+
   font-size: 16px;
   line-height: 16px;
   font-family: $oswald;
   text-transform: uppercase;
   color: $text-dark;
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  &::after {
+    content: "";
+    width: 32px;
+    height: 10px;
+    margin-left: 17px;
+
+    background-image: url("../img/arrow.svg");
+  }
 
   @media (min-width: $tablet) {
     font-size: 20px;
