--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -43,6 +43,7 @@ $cards-border: $pinkgrey;
 $card-title: $darkgrey;
 $special-btn: $basic-grey;
 $special-border: $special-pink;
+$social-icon: $grey;
 
 //text
 
@@ -52,4 +53,4 @@ $oswald: "Oswald", "Arial", sans-serif;
 //breakpoints
 
 $tablet: 768px;
-$desktop: 1440px;
+$desktop: 1280px;
