--- a/source/sass/blocks/_offer.scss
+++ b/source/sass/blocks/_offer.scss
@@ -1,4 +1,5 @@
 .offer {
+  position: relative;
   display: flex;
   flex-direction: column;
   padding: 30px 31px 18px 20px;
@@ -100,7 +101,6 @@
 }
 
 .offer__description {
-  position: relative;
   display: block;
   padding: 0 0 23px 0;
   margin: 0 0 15px 0;
@@ -111,7 +111,7 @@
   border-bottom: 1px solid $light-back;
 
   @media (min-width: $tablet) {
-    max-width: 377px;
+    max-width: calc(100% - 220px);
     padding: 0;
     margin-bottom: 48px;
 
@@ -125,17 +125,19 @@
       content: "";
       width: 200px;
       height: 211px;
-      top: -60px;
-      left: 390px;
+      top: 85px;
+      right: 62px;
 
       background-image: url("../img/offer-cat.svg");
     }
 
     &--pro {
+      max-width: calc(100% - 240px);
+
       &::after {
         width: 268px;
         height: 200px;
-        left: 355px;
+        right: 27px;
 
         background-image: url("../img/offer-cat-pro.svg");
       }
