Иконки и стайлгайд страницы формы

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -1,13 +1,10 @@
-$basic-green: #68b738;
-$basic-grey: #f2f2f2;
 $pinkgrey: #ebebeb;
-$lightgrey: #cdcdcd;
 $grey: #666666;
+$basic-grey: #f2f2f2;
+$special-grey: #e7e7e7;
 $browngrey: #444444;
 $darkgrey: #222222;
-$special-grey: #e7e7e7;
 $salmon: #ff8282;
-$special-green: #5eaa2f;
 $special-pink: #e6e6e6;
 $white: #ffffff;
 $white03: rgba(255, 255, 255, 0.3);
@@ -16,11 +13,14 @@ $black024: rgba(0, 0, 0, 0.24);
 $black016: rgba(0, 0, 0, 0.16);
 $black04: rgba(0, 0, 0, 0.4);
 $black019: rgba(0, 0, 0, 0.19);
+$lightgrey: #cdcdcd;
+$lightgrey-strong: #bababa;
 $special-lightgrey: #d9d9d9;
+$basic-lightgrey: #dcdcdc;
 $beige: #eaeaea;
 $green: #63a63c;
-$basic-lightgrey: #dcdcdc;
-
+$special-green: #5eaa2f;
+$basic-green: #68b738;
 
 $text-main: $browngrey;
 $text-promo: $white;
@@ -37,6 +37,7 @@ $dark-back: $beige;
 $back: $basic-grey;
 $error: $salmon;
 $border: $lightgrey;
+$border-strong: $lightgrey-strong;
 $form-field: $special-grey;
 $back-green: $green;
 $cards-border: $pinkgrey;
