--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -10,6 +10,8 @@
 }
 
 .form__group {
+  position: relative;
+
   margin: 0;
   padding: 0 0 28px 0;
   border-top: none;
@@ -96,6 +98,8 @@
 }
 
 .form__text {
+  display: block;
+
   font-size: 24px;
   line-height: 26px;
   text-transform: none;
@@ -137,6 +141,38 @@
   }
 }
 
+.form__text {
+  &--owner,
+  &--comment,
+  &--supplements {
+    @media (min-width: $tablet) {
+      width: fit-content;
+      margin-bottom: 76px;
+      margin-left: -39px;
+      padding-right: 42px;
+      padding-left: 39px;
+
+      box-sizing: content-box;
+
+      background-color: white;
+
+      &::before {
+        position: absolute;
+        top: 20px;
+        right: 5px;
+
+        display: block;
+        width: 100%;
+        height: 2px;
+        z-index: -1;
+
+        content: "";
+        background-color: $main;
+      }
+    }
+  }
+}
+
 .form__item-box {
   @media (min-width: $tablet) {
     display: grid;
@@ -151,7 +187,6 @@
     padding: 0;
   }
 }
-
 
 .form__item {
   margin-bottom: 25px;
@@ -252,8 +287,8 @@
     display: flex;
     justify-content: space-between;
     width: $desktop;
-    padding-left: 110px;
-    padding-right: 110px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin: 0 auto 69px;
   }
 }
