--- a/source/sass/blocks/_menu.scss
+++ b/source/sass/blocks/_menu.scss
@@ -83,7 +83,9 @@
   }
 
   @media (min-width: $desktop) {
-    color: $text-promo;
+    &-- {
+      color: $text-promo;
+    }
 
     &--current-desktop {
       border-bottom-color: inherit;
