Декор и резина каталога

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -1,5 +1,6 @@
 $pinkgrey: #ebebeb;
 $grey: #666666;
+$grey-special: #d3d3d3;
 $basic-grey: #f2f2f2;
 $special-grey: #e7e7e7;
 $browngrey: #444444;
@@ -45,6 +46,7 @@ $card-title: $darkgrey;
 $special-btn: $basic-grey;
 $special-border: $special-pink;
 $social-icon: $grey;
+$line: $grey-special;
 
 //text
 
