--- a/source/sass/_container.scss
+++ b/source/sass/_container.scss
@@ -5,7 +5,7 @@
   padding-right: 20px;
 
   @media (min-width: $tablet) {
-    max-width: none;
+    max-width: 1024px;
     padding-left: 30px;
     padding-right: 30px;
 
@@ -16,9 +16,9 @@
   }
 
   @media (min-width: $desktop) {
-    max-width: $desktop;
-    padding-left: 20px;
-    padding-right: 20px;
+    max-width: 1440px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
 
