--- a/source/sass/blocks/_card.scss
+++ b/source/sass/blocks/_card.scss
@@ -1,6 +1,7 @@
 .card {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding-top: 20px;
   padding-bottom: 25px;
 
@@ -8,17 +9,56 @@
     .card__title {
       width: 204px;
       margin: 78px 37px 8px 39px;
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 65px;
+        left: 85px;
+
+        display: block;
+        width: 30px;
+        height: 2px;
+
+        background-color: $line;
+      }
+
+      &::after {
+        transform: rotate(90deg);
+      }
+
+      @media (min-width: $tablet) {
+        &::before,
+        &::after {
+          bottom: 125px;
+          left: 35px;
+
+          width: 60px;
+          height: 2px;
+        }
+      }
     }
 
     .card__button {
       color: $text-main;
       background-color: $special-btn;
+
+      &:hover {
+        background-color: $cards-border;
+      }
+
+      &:active {
+        background-color: $cards-border;
+        opacity: 0.3;
+      }
     }
   }
 
   @media (min-width: $tablet) {
     flex-direction: column;
     align-items: center;
+    max-width: 430px;
     padding: 0 36px 40px;
 
     background-color: $back;
@@ -45,6 +85,8 @@
 }
 
 .card__title {
+  position: relative;
+
   width: 76px;
   margin: 0 0 18px 0;
 
