--- a/source/sass/blocks/_checkbox.scss
+++ b/source/sass/blocks/_checkbox.scss
@@ -37,19 +37,21 @@
   }
 }
 
-.checkbox__label::before {
-  content: " ";
-  position: absolute;
-  left: 0;
-  top: -5px;
-  width: 30px;
-  height: 30px;
+.checkbox__label {
+  &::before {
+    content: " ";
+    position: absolute;
+    left: 0;
+    top: -5px;
+    width: 30px;
+    height: 30px;
 
-  border: 1px solid $border;
+    border: 1px solid $border;
 
-  @media (min-width: $tablet) {
-    width: 40px;
-    height: 40px;
+    @media (min-width: $tablet) {
+      width: 40px;
+      height: 40px;
+    }
   }
 }
 
