--- a/source/sass/blocks/_features.scss
+++ b/source/sass/blocks/_features.scss
@@ -51,7 +51,7 @@
   }
 
   @media (min-width: $desktop) {
-    grid-template-columns: repeat(4, 250px);
+    grid-template-columns: repeat(4, 1fr);
     row-gap: 11px;
     column-gap: 74px;
   }
