--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -141,34 +141,29 @@
   }
 }
 
-.form__text {
-  &--owner,
-  &--comment,
-  &--supplements {
-    @media (min-width: $tablet) {
-      width: fit-content;
-      margin-bottom: 76px;
-      margin-left: -39px;
-      padding-right: 42px;
-      padding-left: 39px;
+.form__text--line {
+  @media (min-width: $tablet) {
+    width: fit-content;
+    margin-left: -39px;
+    padding-right: 42px;
+    padding-left: 39px;
 
-      box-sizing: content-box;
+    box-sizing: content-box;
 
-      background-color: white;
+    background-color: white;
 
-      &::before {
-        position: absolute;
-        top: 20px;
-        right: 5px;
+    &::before {
+      position: absolute;
+      top: 20px;
+      right: 5px;
 
-        display: block;
-        width: 100%;
-        height: 2px;
-        z-index: -1;
+      display: block;
+      width: 100%;
+      height: 2px;
+      z-index: -1;
 
-        content: "";
-        background-color: $main;
-      }
+      content: "";
+      background-color: $main;
     }
   }
 }
@@ -286,9 +281,9 @@
   @media (min-width: $desktop) {
     display: flex;
     justify-content: space-between;
-    width: $desktop;
-    padding-left: 20px;
-    padding-right: 20px;
+    max-width: 1440px;
+    padding-left: 30px;
+    padding-right: 30px;
     margin: 0 auto 69px;
   }
 }
