--- a/source/sass/blocks/_offers.scss
+++ b/source/sass/blocks/_offers.scss
@@ -6,8 +6,9 @@
   }
 
   @media (min-width: $desktop) {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 80px;
 
     padding-bottom: 71px;
   }
