--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -15,9 +15,8 @@
     }
 
     @media (min-width: $desktop) {
+      max-width: 1440px;
       margin: 0 auto;
-      padding-left: 20px;
-      padding-right: 20px;
     }
   }
 
@@ -56,10 +55,6 @@
 .page-header__logo {
   display: flex;
   margin-right: auto;
-
-  @media (min-width: $tablet) {
-    margin-right: 95px;
-  }
 
   @media (min-width: $desktop) {
     margin-right: 540px;
